argocd/bytestash/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bytestash
  labels:
    app: bytestash
spec:
  replicas: 1
  serviceName: bytestash
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      containers:
        - name: bytestash
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              protocol: TCP
          image: harbor.yanello.net/ghcr/jordan-dalby/bytestash:1.5.13@sha256:0decae44290a92aaee18bf3b027e756656462758c3a9afe436505b738c38e64a
          volumeMounts:
            - mountPath: /data/snippets
              name: snip
          resources:
            requests:
              cpu: 10m
              memory: 500Mi
            limits:
              memory: 640Mi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: snip
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd
        resources:
          requests:
            storage: 5Gi
