argocd/bytestash/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bytestash
  name: bytestash
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: bytestash
