argocd/bytestash/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
  #   gethomepage.dev/enabled: 'true'
  #   gethomepage.dev/name: bytestash
  #   gethomepage.dev/icon: bytestash
  #   gethomepage.dev/description: 'bytestash is the inventory and organization system built for the Home User!'
  #   gethomepage.dev/pod-selector: app=bytestash
  labels:
    app.kubernetes.io/instance: bytestash-app
  name: bytestash-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - bs.yanello.net
  rules:
    - backendRefs:
        - name: bytestash
          port: 5000
